<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">PlanetFitness</string>
    <string name="number_digits" translatable="false">.0123456789</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="companion_license" translatable="false">EoACC0Uau91gUnJEPR3hSbSUeFypWO+Yfw4qPR2D+qesYbq+nT6hRqgvdq9lMMxUwVegTDmklfikQYoIP/Tq9nIArbFTOz6gf98o8m2XRCNKx04T/EFbjbnMq0YEVdUrv7AyHcNHeqOoZGRHQNXGM/CG3uNUEUymzG1T3+iqc5uOSfMkabJtITE/qhMRPOtji3X8USiwBD+OmrKYxpGaTY7fFn2LDGZ/VfImmp5SNFqUVfTSXW71xe2SDRP9hwv88mN5175SxiqyHsHiWokL0KEI1DDbD35KXG9nE9mxz44mkDI99UgiJY0xRl6CSaEF6gn6QwlUvUuQAbNHKhexus9qmyILAQIDBAUGBwgJCgsqCAECAwQFBwgJ</string>
    <string name="initialization_failed" translatable="false">SDK Initialization Failed</string>
    <string name="green_menu_1" translatable="false">M20 0H301C312.046 0 321 8.95431 321 20V388C321 399.046 312.046 408 301 408H20C8.95431 408 0 399.046 0 388V20C0 8.95431 8.95431 0 20 0Z </string>
    <string name="green_menu_2" translatable="false">M20 0H76C87.0457 0 96 8.95431 96 20V388C96 399.046 87.0457 408 76 408H20C8.95431 408 0 399.046 0 388V20C0 8.95431 8.95431 0 20 0Z </string>
    <string name="arrow_right" translatable="false">M8.59,16.59L13.17,12 8.59,7.41 10,6l6,6 -6,6 -1.41,-1.41z</string>
    <string name="arrow_left" translatable="false">M15.41,16.59L10.83,12l4.58,-4.59L14,6l-6,6 6,6 1.41,-1.41z</string>
    <string name="qrcode_login_text2">Scan the code on the right side using \nyour gym’s mobile app.</string>
    <string name="nfc_login_text2">Hold your member card close to the NFC \nsensor, as shown in the picture.</string>
    <string name="gotoworkout_login_text2" translatable="false">Settings can only be unlocked with a staff \nmember card. Hold the card close to the \nNFC sensor, as shown in the picture.</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="img" translatable="false">no_img</string>
    <string name="start_waiting">To start, please wait\nuntil the deck has fully stopped.</string>
    <string name="start_waiting_bike" translatable="false">To start, please wait\nuntil the setting to be completed.</string>
    <string name="resume_waiting">To resume, please wait\nuntil the deck has fully stopped.</string>
    <string name="resume_waiting_bike" translatable="false">To resume, please wait\nuntil the setting to be completed.</string>
    <string name="manual">Manual</string>
    <string name="hill">Hill</string>
    <string name="fatburn">Fatburn</string>
    <string name="cardio">Cardio</string>
    <string name="strength">Strength</string>
    <string name="hiit">HIIT</string>
    <string name="k5_run">5K Run</string>
    <string name="k10_run">10K Run</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="air_force">Air Force</string>
    <string name="army">Army</string>
    <string name="coast_guard">Coast Guard</string>
    <string name="gerkin" translatable="false">Gerkin</string>
    <string name="peb" translatable="false">PEB</string>
    <string name="marine_corps">Marine Corps</string>
    <string name="navy">Navy</string>
    <string name="wfi" translatable="false">WFI</string>
    <string name="ctt_prediction">CTT Prediction</string>
    <string name="ctt_performance">CTT Performance</string>
    <string name="Watts">Watts</string>
    <string name="watts">watts</string>
    <string name="fitness_test">Fitness Test</string>
    <string name="use_time_limit">Workout Time Limit</string>
    <string name="use_limit">Use Limit</string>
    <string name="speed">speed</string>
    <string name="incline">incline</string>
    <string name="Speed">Speed</string>
    <string name="Incline">Incline</string>
    <string name="Level">level</string>
    <string name="Pace">Pace</string>
    <string name="Calories">Calories</string>
    <string name="Heart_Rate">Heart Rate</string>
    <string name="lb">lb</string>
    <string name="kg">kg</string>
    <string name="Avg_Power">Avg Power</string>
    <string name="Avg_Speed">Avg Speed</string>
    <string name="Avg_Level">Avg Level</string>
    <string name="ft">ft</string>
    <string name="cm">cm</string>
    <string name="m">m</string>
    <string name="METs">METs</string>
    <string name="manual_desc">Speed and incline are \ncontrolled by the user.\nTarget time is set\nbefore start.</string>
    <string name="manual_desc_bike">Set target workout time, adjust resistance manually.</string>
    <string name="hill_desc">Triangular progression with maximum effort in the middle of the workout. </string>
    <string name="hill_desc_bike">Triangular progression with maximum effort in the middle of the workout. </string>
    <string name="fatburn_desc">Maximize the benefits of cardiovascular training.</string>
    <string name="fatburn_desc_bike">Maximize the benefits of cardiovascular training.</string>
    <string name="cardio_desc">Maximize endurance training by alternating high and low intensity.</string>
    <string name="cardio_desc_bike">Maximize endurance training by alternating high and low intensity.</string>
    <string name="strength_desc">Build strength and muscular endurance in the lower body \nand glutes. </string>
    <string name="strength_desc_bike">Build strength and muscular endurance in the lower body \nand glutes. </string>
    <string name="hiit_desc">Short bursts of high-intensity sprinting followed by brief rest periods.</string>
    <string name="hiit_desc_bike">Short bursts of high intensity sprinting followed by short \nrest periods.</string>
    <string name="heart_rate_desc">Follow incline \nrecommendations \nto keep within 5 bpm \nof target heart rate.</string>
    <string name="heart_rate_desc_bike">Follow resistance level recommendations to keep within 5 bpm of target heart rate.</string>
    <string name="k5_run_desc">Speed and incline are \ncontrolled by the user.\nTarget time is set\nbefore start.</string>
    <string name="k10_run_desc">Speed and incline are \ncontrolled by the user.\nTarget time is set\nbefore start.</string>
    <string name="air_force_desc">A timed %1$s run.\nControl the speed \nmanually. Make sure \nto provide your \nphysical data.</string>
    <string name="army_desc">A timed %1$s run.\nControl the speed \nmanually. Make sure \nto provide your \nphysical data.</string>
    <string name="coast_guard_desc">A timed %1$s run.\nControl the speed \nmanually. Make sure \nto provide your \nphysical data.</string>
    <string name="gerkin_desc">Speed and incline change \nautomatically until you reach\n%1$s\nStop if you feel ill or\ndistressed.</string>
    <string name="marine_corps_desc">A timed %1$s run.\nControl the speed \nmanually. Make sure \nto provide your \nphysical data.</string>
    <string name="navy_desc">A timed %1$s run.\nControl the speed \nmanually. Make sure \nto provide your \nphysical data.</string>
    <string name="peb_desc">A timed %1$s run.\nControl the speed \nmanually. Make sure \nto provide your \nphysical data.</string>
    <string name="wfi_desc">Speed and incline change \nautomatically until you reach\n%1$s\nStop if you feel ill or\ndistressed.</string>
    <string name="ctt_prediction_desc">Speed and incline change \nautomatically until you reach\n%1$s\nStop if you feel ill or\ndistressed.</string>
    <string name="ctt_performance_desc">Speed and incline increase \ngradually for 12 minutes.\nStop if you feel ill or\ndistressed.</string>
    <string name="for_12_minutes">for 12 minutes.</string>
    <string name="watt_desc">Level is adjusted automatically depending on your cadence.</string>
    <string name="fitness_test_desc">Level changes automatically until you reach 85% of max heart rate. Stop if you feel ill or distressed.</string>
    <string name="interval_desc">Alternating low and high speed intervals with incline gradually increasing.</string>
    <string name="interval_bike_desc">Alternating intervals with low and high resistance levels.</string>
    <string name="custom_desc">Create your own personalized program by designing speed and incline patterns.</string>
    <string name="custom_bike_desc">Create your own personalized program by designing an intensity pattern.</string>
    <string name="present" translatable="false">%1$s <![CDATA[%]]></string>
    <string name="custom" translatable="false">custom</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="ending_time">Ending in %1$s</string>
    <string name="ios_bottom_text2" translatable="false">WIFI NAME: %1$s\n(A STRONG CONNECTION IS REQUIRED)\nDEVICE NAME: %2$s</string>
    <string name="time_min"><font fgcolor='#ffffff'>Time</font> <font fgcolor='#5a7085'>min</font></string>
    <string name="max_speed_mph"><font fgcolor='#ffffff'>Max Speed</font> <font fgcolor='#5a7085'>mph</font></string>
    <string name="max_speed_kph"><font fgcolor="#ffffff">Max Speed</font> <font fgcolor="#5a7085">km/h</font></string>
    <string name="max_level"><font fgcolor='#ffffff'>Max Level</font></string>
    <string name="sprint_speed_mph"><font fgcolor='#ffffff'>Sprint Speed</font> <font fgcolor='#5a7085'>mph</font></string>
    <string name="sprint_speed_kph"><font fgcolor="#ffffff">Sprint Speed</font> <font fgcolor="#5a7085">km/h</font></string>
    <string name="sprint_level"><font fgcolor='#ffffff'>Sprint Level</font></string>
    <string name="sprint_time_sec"><font fgcolor='#ffffff'>Sprint Time</font> <font fgcolor='#5a7085'>sec</font></string>
    <string name="rest_time_sec"><font fgcolor='#ffffff'>Rest Time</font> <font fgcolor='#5a7085'>sec</font></string>
    <string name="rest_speed_mph"><font fgcolor='#ffffff'>Rest Speed</font> <font fgcolor='#5a7085'>mph</font></string>
    <string name="Time">Time</string>
    <string name="prepare_your_device_make_sure_that_your_garmin_device_is_not_connected_to_your_smartphone_and_is_in_pairing_mode">%1$s make sure that your \nGarmin device is not connected to your\n smartphone and is in pairing mode.</string>
    <string name="Close">Close</string>
    <string name="Next">Next</string>
    <string name="Done">Done</string>
    <string name="Add_Garmin_Device">Add Garmin Device</string>
    <string name="Prepare_Your_Device">Prepare Your Device</string>
    <string name="brake_test">Brake Test</string>
    <string name="error_code_log">Error Code Log</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="try_turning_brake_on_and_off_to_check_its_response">Try turning brake on and off to check its response.</string>
    <string name="Date">Date</string>
    <string name="Code">Code</string>
    <string name="Message">Message</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="how_to_use_wirecast">How to Use Wirecast</string>
    <string name="use_a_lightning_to_hdmi_adapter_and_an_hdmi_cable_to_connect_your_phone_to_the_machine_console">Use a Lightning to HDMI adapter and an HDMI cable to connect your phone to the machine console.</string>
    <string name="the_hdmi_port_is_located_in_the_right_corner_of_the_machine_console_s_underside">The HDMI port is located in the right corner of the machine console’s underside.</string>
    <string name="iphone" translatable="false">iPhone</string>
    <string name="use_a_usb_c_to_hdmi_adapter_and_an_hdmi_cable_or_a_direct_usb_c_to_hdmi_cable_to_connect_your_phone_to_the_machine_console_make_sure_your_android_smartphone_supports_video_output_over_usb_c">Use a USB-C to HDMI adapter and an HDMI cable, or a direct USB-C to HDMI cable to connect your phone to the machine console. Make sure your Android smartphone supports video output over USB-C.</string>
    <string name="android_phone">Android \nPhone</string>
    <string name="how_to_use_miracast">How to Use Miracast</string>
</resources>