<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color11151a"
    tools:context=".dashboard_media.HowToMirrorWindow">



    <com.google.android.material.button.MaterialButton
        style="@style/MButton_252e37"
        android:id="@+id/btn_close"
        android:paddingStart="30dp"
        android:paddingEnd="26dp"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/Close"
        android:textSize="24sp"
        app:icon="@drawable/icon_cancel"
        app:iconGravity="textEnd"
        app:iconPadding="12dp"
        app:iconTint="@color/colorADB8C2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/bg_miracast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvHowTo1"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/how_to_use_miracast"
            android:textColor="@color/white"
            android:textSize="70sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvHowTo2"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/how_to_use_wirecast"
            android:textColor="@color/white"
            android:textSize="70sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="822dp"
            android:layout_height="1dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="432dp"
            android:background="@color/color252e37"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="822dp"
            android:layout_height="1dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="808dp"
            android:background="@color/color252e37"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="518dp"
            android:layout_height="120dp"
            android:layout_marginStart="328dp"
            android:layout_marginTop="856dp"
            android:fontFamily="@font/inter_regular"
            android:includeFontPadding="false"
            android:text="@string/the_hdmi_port_is_located_in_the_right_corner_of_the_machine_console_s_underside"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="224dp"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/iphone"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="518dp"
            android:layout_height="160dp"
            android:layout_marginStart="328dp"
            android:layout_marginTop="224dp"
            android:fontFamily="@font/inter_regular"
            android:includeFontPadding="false"
            android:text="@string/use_a_lightning_to_hdmi_adapter_and_an_hdmi_cable_to_connect_your_phone_to_the_machine_console"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="480dp"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/android_phone"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="518dp"
            android:layout_height="280dp"
            android:layout_marginStart="328dp"
            android:layout_marginTop="480dp"
            android:fontFamily="@font/inter_regular"
            android:includeFontPadding="false"
            android:text="@string/use_a_usb_c_to_hdmi_adapter_and_an_hdmi_cable_or_a_direct_usb_c_to_hdmi_cable_to_connect_your_phone_to_the_machine_console_make_sure_your_android_smartphone_supports_video_output_over_usb_c"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="127dp"
            android:src="@drawable/picture_treadmill_wire_cast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>