<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context=".maintenance_mode.MaintenanceBrakeTestFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="1185dp"
        android:layout_height="match_parent"
        android:background="@drawable/panel_bg_left_32_1c242a">

        <androidx.appcompat.widget.AppCompatTextView
            android:gravity="center_vertical"
            android:maxLines="1"
            android:autoSizeMaxTextSize="70sp"
            android:autoSizeTextType="uniform"
            android:layout_marginEnd="56dp"
            app:layout_constraintEnd_toStartOf="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/brake_test"
            android:textColor="@color/white"
            android:textSize="70sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/MButton_252e37"
            android:id="@+id/btnDone"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="56dp"
            android:text="@string/Done"
            android:textSize="24sp"
            app:icon="@drawable/icon_check"
            app:iconGravity="textEnd"
            app:iconPadding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="435dp"
            android:layout_marginTop="540dp"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/OFF"
            android:textColor="@color/color5a7085"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/cbBrakeTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="516dp"
            android:background="@drawable/btn_checkbox_l"
            android:button="@null"
            android:checked="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvOn"
            android:layout_marginEnd="438dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="540dp"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:text="@string/ON"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTip"
            android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="56dp"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/inter_regular"
            android:textSize="24sp"
            android:textColor="@color/color8192a2"
            android:text="@string/try_turning_brake_on_and_off_to_check_its_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Group
            android:visibility="invisible"
            app:constraint_referenced_ids="tvOff,tvOn,cbBrakeTest"
            android:id="@+id/groupTreadmill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Group
            app:constraint_referenced_ids="ibMinus,ibPlus,pickBrake"
            android:id="@+id/groupBike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:contentDescription="@string/minus"
            android:id="@+id/ibMinus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="287dp"
            android:background="@drawable/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:contentDescription="@string/plus"
            android:id="@+id/ibPlus"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="287dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="287dp"
            android:background="@drawable/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.dyaco.spirit_commercial.support.custom_view.wheelPicker.OptionsPickerView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/pickBrake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>